# keychat-protocol

./: keychat-protocol-spec-v2-zh.md  keychat-protocol-spec-v2.md  libkeychat-guide.md
keychat-cli-agent/: Cargo.toml
keychat-cli-agent/src/: app.rs  commands.rs  main.rs
keychat-cli-human/src/: chat.rs  config.rs  daemon.rs  groups.rs  multi_agent.rs  multi_daemon.rs  payment_cmd.rs  state.rs
libkeychat/: Cargo.toml
libkeychat-ffi/: ffi.rs
libkeychat-interop/: Cargo.toml
libkeychat-interop/src/: main.rs
libkeychat/src/: address.rs  chat.rs  error.rs  ffi.rs  friend_request.rs  group.rs  identity.rs  lib.rs  media.rs  message.rs  mls.rs  mls_extension.rs  mls_provider.rs  session.rs  signal_keys.rs  signal_session.rs  signal_store.rs  stamp.rs  transport.rs
libkeychat/tests/: integration.rs
