[package]
name = "libkeychat-interop"
version = "0.1.0"
edition = "2021"

[dependencies]
impl_a = { path = "../libkeychat", package = "libkeychat" }
impl_b = { path = "../libkeychat", package = "libkeychat-b" }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
base64 = "0.22"
nostr = { version = "0.37", features = ["nip44"] }
nostr-sdk = "0.37"
anyhow = "1"
openmls = "0.8.1"
openmls_traits = "0.5.0"
tls_codec = { version = "0.4", features = ["derive", "serde"] }
hex = "0.4"
tempfile = "3"
